--- a/PetrolBunkManagement/package.json
+++ b/PetrolBunkManagement/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,8 +28,12 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "framer-motion": "^12.4.7",
     "globals": "^15.14.0",
+    "mongoose": "^8.11.0",
     "postcss": "^8.5.1",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   },
