--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,9 +3,11 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
 node_modules/
+.env
+# Additional entries
+*.log
 .env
