--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "nodemon": "^3.1.9",
     "vite": "^2.0.0"
   },
-  "author": "Your Name",
+  "author": "Darshan Gowda",
   "license": "ISC"
 }
