--- a/PetrolBunkManagement/package.json
+++ b/PetrolBunkManagement/package.json
@@ -14,6 +14,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.473.0",
+    "number-to-words": "^1.2.4",
     "react": "^18.3.1",
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
