--- a/PetrolBunkManagement/package.json
+++ b/PetrolBunkManagement/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
