--- a/PetrolBunkManagement/package.json
+++ b/PetrolBunkManagement/package.json
@@ -19,7 +19,8 @@
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
