--- a/PetrolBunkManagement/package.json
+++ b/PetrolBunkManagement/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.473.0",
+    "luxon": "^3.5.0",
     "number-to-words": "^1.2.4",
     "react": "^18.3.1",
     "react-datepicker": "^8.1.0",
