--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "concurrently": "^6.0.0"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "nodemon": "^3.1.9",
     "vite": "^2.0.0"
   },
