--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "nodemon": "^3.1.9",
     "vite": "^2.0.0"
   },
-  "author": "Darshan Gowda",
+  "author": "Darshan Gowda G S",
   "license": "ISC"
 }
