--- a/PetrolBunkManagement/package.json
+++ b/PetrolBunkManagement/package.json
@@ -21,6 +21,7 @@
     "luxon": "^3.5.0",
     "number-to-words": "^1.2.4",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
@@ -37,7 +38,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.5.0",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "react-toastify": "^11.0.5",
