changes in filenames and optimization

--- a/package.json
+++ b/package.json
@@ -4,15 +4,10 @@
   "description": "A management system for petrol bunk operations.",
   "main": "backend/index.js",
   "scripts": {
-    "start": "concurrently \"npm run start --prefix backend\" \"npm run dev --prefix frontend\""
+    "start": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
   },
   "dependencies": {
-    "concurrently": "^6.0.0"
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0",
-    "nodemon": "^3.1.9",
-    "vite": "^2.0.0"
+    "concurrently": "^8.2.2"
   },
   "author": "Darshan Gowda G S",
   "license": "ISC"
