--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "backend",
+  "name": "petrol-bunk-backend",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js",
@@ -17,9 +16,5 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
-  },
-  "keywords": [],
-  "author": "Darshan Gowda G S",
-  "license": "ISC",
-  "description": ""
+  }
 }
